package com.nanyin.pattern.facade;
/**
 * 服务接口
 * @Author nanyin
 * @Date 00:26 2019-06-13
 **/
public interface Services {
    void start();
    void stop();
    void restart();
}
